 Copyright (C) 2009, 2010, 2011, 2012 Mats Wahlberg

 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
 notice and this notice are preserved.

TODO: more info in header!

ReCaged 0.7.1 (?/?/2012)
	* Move to Autotools (Automake, Autoconf) for building
	* Detect if running in "installed" or "portable" mode
	* Logging to file
	* NSIS installer for w32
	* Joystick (gamepad) support