@@ -2,7 +2,8 @@
 
  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
- notice and this notice are preserved.
+ notice and this notice are preserved. This file is offered as-is,
+ without any warranty.
 
 TODO: more info in header!
 
@@ -11,7 +12,7 @@ Mats ("Slinger") Wahlberg <rcxslinger [at] gmail.com>
 	* Programming
 	* 3D Models
 
-K.Mac <... [a] ... . ...>
+K.Mac
 	* Extensive Testing
 	* Various Hacks
 	* Lots Of Ideas
