@@ -2,7 +2,8 @@
 #
 # Copying and distribution of this file, with or without modification,
 # are permitted in any medium without royalty provided the copyright
-# notice and this notice are preserved.
+# notice and this notice are preserved. This file is offered as-is,
+# without any warranty.
 
 #configuration for internal values, you do not need to change any of them to start
 #with, but resolution and eye_distance are two things you probably want to tweak.
