@@ -2,7 +2,8 @@
 #
 # Copying and distribution of this file, with or without modification,
 # are permitted in any medium without royalty provided the copyright
-# notice and this notice are preserved.
+# notice and this notice are preserved. This file is offered as-is,
+# without any warranty.
 
 #how fast going between 0 and 1 (max):
 #buttons (low for precision)
