@@ -5,4 +5,5 @@ Copyright (C) 2010, 2011, 2012 Mats Wahlberg
 
 Copying and distribution of these files, with or without modification,
 are permitted in any medium without royalty provided the copyright
-notice and this notice are preserved.
+notice and this notice are preserved. These files are offered as-is,
+without any warranty.
