@@ -2,7 +2,8 @@
 #
 # Copying and distribution of this file, with or without modification,
 # are permitted in any medium without royalty provided the copyright
-# notice and this notice are preserved.
+# notice and this notice are preserved. This file is offered as-is,
+# without any warranty.
 
 #note: "hash levels" tweaked for geoms under 1024 meters
 #bigger models should be divided into smaller pieces
